src/objects/RVOE__c.object
<CustomObject>
    <fields>
        <fullName>ActivoSistemaProspectos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Activo en sistema prospectos</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Activo__c</fullName>
        <label>Activo</label>
        <picklist>
            <picklistValues>
                <fullName>Activo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactivo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ClaveCentroTrabajo__c</fullName>
        <label>Clave centro de trabajo</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Descripcin__c</fullName>
        <label>Descripción</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DireccionGeneralProfesiones__c</fullName>
        <label>Dirección general de profesiones</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DuracionPrograma__c</fullName>
        <globalPicklist>DuracionPrograma</globalPicklist>
        <label>Duración del programa</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FechaAcuerdo__c</fullName>
        <label>Fecha de acuerdo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ModalidadPrograma__c</fullName>
        <label>Modalidad del programa</label>
        <picklist>
            <picklistValues>
                <fullName>Escolarizado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flexible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Escolarizado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flexible por créditos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Escolarizado por Créditos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixto</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ModalidadRVOE__c</fullName>
        <label>Modalidad del RVOE</label>
        <picklist>
            <picklistValues>
                <fullName>Anual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuatrimestral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semestral</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Modalidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Modalidad</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo__c.TipoCatalogo__c</field>
                <operation>equals</operation>
                <value>Modalidad</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo__c</referenceTo>
        <relationshipLabel>RVOES (Modalidad)</relationshipLabel>
        <relationshipName>RvoesModalidad</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nivel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nivel</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Catalogo__c.TipoCatalogo__c</field>
                <operation>equals</operation>
                <value>Nivel</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Catalogo__c</referenceTo>
        <relationshipLabel>RVOES</relationshipLabel>
        <relationshipName>RVOES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NumeroAcuerdo__c</fullName>
        <label>Número de acuerdo</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Periodicidad__c</fullName>
        <globalPicklist>Periodicidad</globalPicklist>
        <label>Periodicidad</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Consecutivo de RVOE</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plantel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plantel</label>
        <referenceTo>Plantel__c</referenceTo>
        <relationshipLabel>RVOES</relationshipLabel>
        <relationshipName>RVOES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Programa__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Programa al que se asocia</description>
        <label>Programa</label>
        <referenceTo>Programa__c</referenceTo>
        <relationshipLabel>RVOES</relationshipLabel>
        <relationshipName>RVOES</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TipoSecretaria__c</fullName>
        <label>Tipo de secretaría</label>
        <picklist>
            <picklistValues>
                <fullName>Estatal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TotalCreditos__c</fullName>
        <label>Total de créditos</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalMaterias__c</fullName>
        <label>Total de materias</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>URLPlanEstudios__c</fullName>
        <label>URL Plan de estudios</label>
        <type>Url</type>
    </fields>
    <label>RVOE</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Modalidad__c</columns>
        <columns>Plantel__c</columns>
        <columns>Programa__c</columns>
        <columns>URLPlanEstudios__c</columns>
        <columns>Plan__c</columns>
        <columns>ModalidadPrograma__c</columns>
        <columns>Nivel__c</columns>
        <columns>Activo__c</columns>
        <columns>ModalidadRVOE__c</columns>
        <columns>DuracionPrograma__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Modalidad__c</field>
            <operation>equals</operation>
            <value>Presencial,Ejecutiva,Online</value>
        </filters>
        <label>Todos</label>
    </listViews>
    <listViews>
        <fullName>AllActivos</fullName>
        <columns>NAME</columns>
        <columns>Modalidad__c</columns>
        <columns>Plantel__c</columns>
        <columns>Programa__c</columns>
        <columns>Plan__c</columns>
        <columns>TotalMaterias__c</columns>
        <columns>ModalidadPrograma__c</columns>
        <columns>Nivel__c</columns>
        <columns>ModalidadRVOE__c</columns>
        <columns>DuracionPrograma__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activo__c</field>
            <operation>equals</operation>
            <value>Activo</value>
        </filters>
        <label>Todos Activos</label>
    </listViews>
    <listViews>
        <fullName>AllNoActivos</fullName>
        <columns>NAME</columns>
        <columns>Modalidad__c</columns>
        <columns>Plantel__c</columns>
        <columns>Programa__c</columns>
        <columns>Plan__c</columns>
        <columns>TotalMaterias__c</columns>
        <columns>ModalidadPrograma__c</columns>
        <columns>Nivel__c</columns>
        <columns>ModalidadRVOE__c</columns>
        <columns>DuracionPrograma__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Activo__c</field>
            <operation>equals</operation>
            <value>Inactivo</value>
        </filters>
        <label>Todos No Activos</label>
    </listViews>
    <listViews>
        <fullName>Ejecutiva</fullName>
        <columns>NAME</columns>
        <columns>Modalidad__c</columns>
        <columns>Plantel__c</columns>
        <columns>Programa__c</columns>
        <columns>Plan__c</columns>
        <columns>TotalMaterias__c</columns>
        <columns>ModalidadPrograma__c</columns>
        <columns>Nivel__c</columns>
        <columns>Activo__c</columns>
        <columns>ModalidadRVOE__c</columns>
        <columns>DuracionPrograma__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Modalidad__c</field>
            <operation>equals</operation>
            <value>Ejecutiva</value>
        </filters>
        <label>Ejecutiva</label>
    </listViews>
    <listViews>
        <fullName>Licenciatura</fullName>
        <columns>NAME</columns>
        <columns>Plantel__c</columns>
        <columns>Programa__c</columns>
        <columns>ClaveCentroTrabajo__c</columns>
        <columns>NumeroAcuerdo__c</columns>
        <columns>FechaAcuerdo__c</columns>
        <columns>TotalCreditos__c</columns>
        <columns>DireccionGeneralProfesiones__c</columns>
        <columns>Plan__c</columns>
        <columns>TotalMaterias__c</columns>
        <columns>ModalidadPrograma__c</columns>
        <columns>Nivel__c</columns>
        <columns>Activo__c</columns>
        <columns>Periodicidad__c</columns>
        <columns>DuracionPrograma__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Nivel__c</field>
            <operation>equals</operation>
            <value>Maestría</value>
        </filters>
        <filters>
            <field>Plantel__c</field>
            <operation>equals</operation>
            <value>Coatzacoalcos</value>
        </filters>
        <filters>
            <field>Modalidad__c</field>
            <operation>equals</operation>
            <value>Presencial</value>
        </filters>
        <label>Licenciatura</label>
    </listViews>
    <listViews>
        <fullName>Online</fullName>
        <columns>NAME</columns>
        <columns>Modalidad__c</columns>
        <columns>Nivel__c</columns>
        <columns>Plantel__c</columns>
        <columns>Programa__c</columns>
        <columns>ClaveCentroTrabajo__c</columns>
        <columns>NumeroAcuerdo__c</columns>
        <columns>FechaAcuerdo__c</columns>
        <columns>TotalCreditos__c</columns>
        <columns>Plan__c</columns>
        <columns>TotalMaterias__c</columns>
        <columns>ModalidadPrograma__c</columns>
        <columns>Activo__c</columns>
        <columns>Periodicidad__c</columns>
        <columns>DuracionPrograma__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Plantel__c</field>
            <operation>contains</operation>
            <value>Virtual</value>
        </filters>
        <label>Online</label>
    </listViews>
    <listViews>
        <fullName>Presencial</fullName>
        <columns>NAME</columns>
        <columns>Modalidad__c</columns>
        <columns>Plantel__c</columns>
        <columns>Programa__c</columns>
        <columns>Plan__c</columns>
        <columns>TotalMaterias__c</columns>
        <columns>ModalidadPrograma__c</columns>
        <columns>Nivel__c</columns>
        <columns>Activo__c</columns>
        <columns>ModalidadRVOE__c</columns>
        <columns>DuracionPrograma__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Modalidad__c</field>
            <operation>equals</operation>
            <value>Presencial</value>
        </filters>
        <filters>
            <field>Activo__c</field>
            <operation>equals</operation>
            <value>Activo</value>
        </filters>
        <label>Presencial</label>
    </listViews>
    <nameField>
        <displayFormat>RV-{00000}</displayFormat>
        <label># RVOE</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RVOES</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>